# yb-research-scripts

./: .gitattributes  .gitignore  pnl-log.json  pyproject.toml  requirements.txt
chainlink/: .env.example  .gitignore  btcusdt-2024-F2026.json.xz  chainlink_btcusd_rounds.csv.xz  chainlink_pool_window.csv.xz  fetch_chainlink.py  fetch_pool_oracle.py  plot_chainlink_vs_price.py  plot_model_vs_price.py  plot_pool_model.py  pool_oracle_scale.csv.xz  pyproject.toml
cryo/: .env.example  .gitignore  pyproject.toml  setup.sh  test_logs.py  traverse.py  yb.py
cryo/.cargo/: config.toml
pnl/: .gitignore  (+6 more)
rates/: .env.example  REPORT_crvusd_aggregate.md  REPORT_dynamic_incentives.md  REPORT_incentive_efficiency.md  REPORT_incentive_leakage.md  REPORT_incentive_linresp.md  REPORT_incentive_pyusd.md  REPORT_incentive_sim.md  REPORT_liquidity_response.md  REPORT_market_rates.md  REPORT_net_pressure.md  REPORT_others_dynamics.md  REPORT_pool_apr_response.md  REPORT_pool_dynamics.md  REPORT_rush_migration.md  aave_rate_smoothed.csv.xz  aave_usdc_rates.csv.xz  combine_efficiency.py  crvusd_pools.csv.xz  crvusd_pools_fine.csv.xz  fetch_aave_usdc.py  fetch_crvusd_pools.py  fetch_market_rates.py  fetch_pool_apr.py  fetch_pool_liquidity.py  fetch_scrvusd.py  fetch_susds.py  fetch_votemarket_yb.py  fit_hybrid.py  fit_linear_response.py  fit_market_capacity.py  fit_others_dynamics.py  fit_pool_dynamics.py  fit_pool_dynamics_simple.py  fit_pool_dynamics_spectrum.py  fit_pool_liquidity.py  incentive_candidates.csv  incentive_reserve_fine.py  incentive_sim.py  incentive_sim_candidates.py  (+29 more)
(+92 files in other folders)
