[project]
name = "chainlink-experiment"
version = "0.1.0"
description = "Chainlink BTC/USD on-chain feed (per-block via AnswerUpdated forward-fill) vs EMA of real prices"
requires-python = ">=3.12"
dependencies = [
    "titanoboa>=0.2.5",
    "python-dotenv>=1.2.2",
    "eth-utils>=5.0.0",
    "tqdm>=4.67.3",
    "numpy>=2.0",
    "matplotlib>=3.10",
    "pyqt6>=6.11.0",
]
